(executables
 (names day1 day2 day3 day4 day5 day6 day7 day8 day9 day10)
 (libraries async
            core
            graphics
            ocamlgraph
            ppx_tyre
            tyre)
 (preprocess (pps ppxlib ppx_jane ppx_tyre ppxlib.runner)))

(alias
 (name default)
 (deps (alias_rec all)))
