(executables
 (names day1 day2 day3 day4 day5 day6 day7 day8 day9 day10
        day11 day12 day13 day14 day15 day16)
 (libraries async
            core
            graphics
            incremental
            ocamlgraph
            ppx_tyre
            tyre)
 (preprocess (pps ppxlib ppx_jane ppx_tyre ppxlib.runner)))

(alias
 (name default)
 (deps (alias_rec all)))
